[package]
name = "rust-crypto-benchmarks"
version = "0.0.1"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"


[dependencies]
eddsa = {git = "https://github.com/dusk-network/EdDSA.git", branch = "master"}
dusk-bls12_381 = "0.1.3"
babyjubjub-rs = {git = "https://github.com/arnaucube/babyjubjub-rs.git", branch = "master"}
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
rand7 = {package="rand", version="0.7.0"}
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["rand"]}


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_eddsa"
harness = false
